update dashboard part 2